==> Qie-Zi-888/Multi_functionalMenu/18-AT32-VLGL-ESP2-freertos-8310template/project/src/xmc_lcd.c <==
#include "xmc_lcd.h"
#include "gt911.h"
#include "stdio.h"
#include "string.h"

void lcd_wr_data(uint16_t data)
{
  *(__IO uint16_t*) XMC_LCD_DATA = data;
}

uint16_t lcd_rd_data(void)
{
  uint16_t data;

  data = *(uint16_t*)XMC_LCD_DATA;

  return data;
}

void lcd_wr_reg(u16 LCD_Reg, u16 LCD_RegValue)
{	
	*(__IO uint16_t*) XMC_LCD_COMMAND = LCD_Reg;		//
	*(__IO uint16_t*) XMC_LCD_DATA = LCD_RegValue;//
}

u16 Lcd_ReadData_16Bit(void)
{
	u16 r,g,b;
	//dummy data
	r = lcd_rd_data();
	delay_us(1);//
	//8bit:red data	
	//16bit:red and green data
	r = lcd_rd_data();
	delay_us(1);//
	//8bit:green data
  //16bit:blue data
	g = lcd_rd_data();
#if LCD_USE8BIT_MODEL
	delay_us(1);//ÑÓÊ±1us	
	//8bit:blue data
	b = LCD_RD_DATA();
#else	
  b = g>>8;
	g = r&0xFF; 
	r = r>>8;
#endif
	return Color_To_565(r, g, b);
}

void LCD_DrawPoint(u16 x,u16 y)
{
	LCD_SetCursor(x,y);//
	lcd_wr_data(POINT_COLOR); 
}

void lcd_init(void)
{
  /* init xmc */
  xmc_init();
  
  LCD_RESET_HIGH();
  delay_ms(120);
  LCD_RESET_LOW();
  delay_ms(120);
  LCD_RESET_HIGH();
  delay_ms(120);
  

  delay_ms(50);
	//************* ILI9488**********//	
	lcd_wr_command(0XF7);
	lcd_wr_data(0xA9);
	lcd_wr_data(0x51);
	lcd_wr_data(0x2C);
	lcd_wr_data(0x82);

	lcd_wr_command(0xC0);
	lcd_wr_data(0x11);
	lcd_wr_data(0x09);

	lcd_wr_command(0xC1);
	lcd_wr_data(0x41);

	lcd_wr_command(0XC5);
	lcd_wr_data(0x00);
	lcd_wr_data(0x0A);
	lcd_wr_data(0x80);

	lcd_wr_command(0xB1);
	lcd_wr_data(0xB0);
	lcd_wr_data(0x11);

	lcd_wr_command(0xB4);
	lcd_wr_data(0x02);

	lcd_wr_command(0xB6);
	lcd_wr_data(0x02);
	lcd_wr_data(0x22);

	lcd_wr_command(0xB7);
	lcd_wr_data(0xc6);

	lcd_wr_command(0xBE);
	lcd_wr_data(0x00);
	lcd_wr_data(0x04);

	lcd_wr_command(0xE9);
	lcd_wr_data(0x00);

	lcd_wr_command(0x36);
	lcd_wr_data(0x08);

	lcd_wr_command(0x3A);
	lcd_wr_data(0x55);

	lcd_wr_command(0xE0);
	lcd_wr_data(0x00);
	lcd_wr_data(0x07);
	lcd_wr_data(0x10);
	lcd_wr_data(0x09);
	lcd_wr_data(0x17);
	lcd_wr_data(0x0B);
	lcd_wr_data(0x41);
	lcd_wr_data(0x89);
	lcd_wr_data(0x4B);
	lcd_wr_data(0x0A);
	lcd_wr_data(0x0C);
	lcd_wr_data(0x0E);
	lcd_wr_data(0x18);
	lcd_wr_data(0x1B);
	lcd_wr_data(0x0F);

	lcd_wr_command(0XE1);
	lcd_wr_data(0x00);
	lcd_wr_data(0x17);
	lcd_wr_data(0x1A);
	lcd_wr_data(0x04);
	lcd_wr_data(0x0E);
	lcd_wr_data(0x06);
	lcd_wr_data(0x2F);
	lcd_wr_data(0x45);
	lcd_wr_data(0x43);
	lcd_wr_data(0x02);
	lcd_wr_data(0x0A);
	lcd_wr_data(0x09);
	lcd_wr_data(0x32);
	lcd_wr_data(0x36);
	lcd_wr_data(0x0F);

	lcd_wr_command(0x11);
	delay_ms(120);
	lcd_wr_command(0x29);
	
  LCD_direction(0);
	LCD_BL_HIGH();	 
	lcd_clear(RED);
	
}

void lcd_draw_point(uint16_t x, uint16_t y)
{
  lcd_set_block(x, y ,x ,y);
  lcd_write_one_point(POINT_COLOR);	
}

void lcd_clear(uint16_t color)
{
  uint32_t i;

  lcd_set_block(0, 0, 320, 480);
  for(i = 0; i < 320*480; i++)
  {
    lcd_write_one_point(color);
  }
}
